--- a/main.css
+++ b/main.css
@@ -101,6 +101,10 @@ body {
   background-color: #555;
 }
 
+/* .vis-buttons > button#Reset {
+  background-color: red;
+} */
+
 .vis-switch {
   grid-column: auto auto auto;
   grid-auto-flow: column;
